modules/protocol/http/test/nullbytes-ref.txt
debug http: selecting http dissector on flow
debug tcp-connection: opening connection 127.0.0.1:42071 -> 127.0.0.1:80
info alert: id = <>
	severity = low
	description = Parse error at byte 120 : pattern /^(?:[[:blank:]]+)/ doesn't match against ``
debug tcp-connection: dropping connection 127.0.0.1:42071 -> 127.0.0.1:80
debug tcp-connection: closing connection 127.0.0.1:42071 -> 127.0.0.1:80
